# iu9lab-web

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  meson.build  openapi.yaml
.github/workflows/: ci.yaml
cmd/server/: main.go
docs/: gen.sh  openapi.yaml
internal/api/: api.go  api_impl.go  types.go
src/: main.cpp
src/swagger/: .swagger-codegen-ignore
src/swagger/api/: DefaultApi.cpp  DefaultApi.h
src/swagger/impl/: DefaultApiImpl.cpp  DefaultApiImpl.h
src/swagger/model/: Error.cpp  Error.h  Inline_response_200.cpp  Inline_response_200.h  ModelBase.cpp  ModelBase.h  ReportData.cpp  ReportData.h
tests/: conftest.py  test_generator.py
